--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 body {
+    min-width: 960px;
+    margin: 0;
+    padding: 0;
+    
     font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #000000;
@@ -6,11 +10,119 @@ body {
     line-height: 24px;
     text-transform: uppercase;
 }
-
+.clearfix:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+.container {
+    width: 960px;
+    margin: 0 auto;
+    padding: 0 10px;
+    
+    background-color: dimgrey;
+}
 h1 {
     font-size: 30px;
 }
-
 h2 {
     font-size: 24px;
+}
+.main-header {
+
+    background-color: #cccccc;
+}
+.main-navigation {
+    float: left;
+    
+    width: 780px;
+    
+    background-color: aqua;
+}
+
+.user-block {
+    float: right;
+    
+    width: 107px;
+    max-width: 160px;
+    
+    background-color: cornflowerblue;
+}
+
+.logo {
+    width: 368px;
+    height: 162px;
+    margin: 0 auto;
+    
+    background-color: aquamarine;
+}
+
+.features-item {
+    float: left;
+    
+    width: 300px;
+    margin-right: 30px;
+    
+    background-color: darkturquoise;
+}
+
+.features-item:last-child {
+    margin-right: 0px
+}
+
+.index-content {
+    margin-bottom: 20px;
+    padding: 0 30px;
+}
+.content-column-left {
+    float: left;
+    
+    width: 380px;
+    
+    background-color: firebrick;
+}
+.content-column-right {
+    float: right;
+    
+    width: 300px;
+    
+    background-color: firebrick;
+}
+
+figure.gallery-content {
+    margin: 0;
+    padding: 0;
+}
+
+.big-map-image {
+    display: none;
+}
+
+.main-footer {
+    background-color: #cccccc;
+}
+
+.footer-contacts {
+    float: left;
+    
+    width: 320px;
+    margin-right: 60px;
+    
+    background-color: brown;
+}
+
+.footer-social{
+    float: left;
+    
+    width: 260px;
+    
+    background-color: brown;
+}
+
+.footer-copyright{
+    float: right;
+    
+    width: 160px;
+    
+    background-color: brown;
 }
