--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 	font-weight: bold;
 	line-height: 24px;
 	text-transform: uppercase;
-	background: #000000 url("../img/main-bg-image.jpg") no-repeat;
+	background: #070707 url("../img/main-bg-image.jpg") no-repeat;
 }
 
 .clearfix:after {
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-	width: 960px;
+	width: 940px;
 	margin: 0 auto;
 	padding: 0 10px;
 	/*    background-color: dimgrey;*/
@@ -33,6 +33,7 @@ h2 {
 }
 
 .main-header {
+	margin-bottom: 56px;
 	background-color: #000000;
 }
 
@@ -85,7 +86,7 @@ h2 {
 	content: " ";
 	width: 24px;
 	height: 24px;
-	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 100% 0%;
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 1% 103%;
 }
 
 .user-block a {
@@ -102,7 +103,7 @@ h2 {
 }
 
 .user-block a:hover::before {
-	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 100% 100%;
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 0% 5%;
 }
 
 .active a:after {
@@ -121,15 +122,22 @@ h2 {
 
 .logo {
 	width: 368px;
-	height: 162px;
+	min-height: 152px;
 	margin: 0 auto;
+	margin-bottom: 92px;
 	/*    background-color: aquamarine;*/
 }
 
+.features-row {
+	margin-bottom: 65px;
+}
+
 .features-item {
+	position: relative;
 	float: left;
 	width: 300px;
-	margin-right: 30px;
+	margin-right: 20px;
+	text-align: center;
 	/*    background-color: darkturquoise;*/
 }
 
@@ -137,9 +145,109 @@ h2 {
 	margin-right: 0px
 }
 
+.features-item::before {
+	position: absolute;
+	content: " ";
+	top: 55px;
+	left: 50%;
+	margin-left: -10px;
+	width: 20px;
+	height: 20px;
+	background-color: #f7f4f1;
+	transform: rotate(45deg);
+}
+
+.features-title {
+	color: #f7f4f1;
+	font-size: 30px;
+	font-weight: bold;
+	line-height: 30px;
+	margin-bottom: 75px;
+}
+
+.features-item p {
+	color: #f7f4f1;
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: bold;
+}
+
 .index-content {
-	margin-bottom: 20px;
-	padding: 0 30px;
+	position: relative;
+	margin-bottom: 34px;
+	padding: 26px 80px 54px;
+	background: #ffffff url("../img/index-content-bg.jpg")
+}
+
+.index-content::before {
+	content: " ";
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	width: 8px;
+	height: 278px;
+	background: url("../img/index-content-center-new-delimitr.png") no-repeat;
+}
+
+.content-column-title {
+	font-size: 30px;
+	line-height: 30px;
+	font-weight: bold;
+	margin-bottom: 30px;
+}
+
+.news-preview {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.news-preview li {
+	margin-bottom: 24px;
+}
+
+time {
+	font-weight: normal;
+	text-transform: none;
+}
+
+.btn {
+	display: inline-block;
+	width: 140px;
+	color: #ffffff;
+	background-color: #000000;
+	padding: 10px 0px 9px;
+	text-decoration: none;
+	text-align: center;
+	vertical-align: top;
+}
+
+.btn:hover {
+	background-color: #663d15;
+}
+
+button.btn {
+	border: none;
+	outline: none;
+	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #ffffff;
+	font-weight: bold;
+	line-height: 24px;
+	text-transform: uppercase;
+}
+
+.main-contacts .btn {
+	margin-right: 20px;
+	margin-top: 23px;
+}
+
+.main-contacts p {
+	margin-bottom: 23px
+}
+
+.news-preview + .btn {
+	margin-top: 7px;
 }
 
 .content-column-left {
@@ -158,13 +266,77 @@ h2 {
 	/*    background-color: firebrick;*/
 }
 
-figure.gallery-content {
+.gallery-content {
 	margin: 0;
 	padding: 0;
+	border: 7px solid #ffffff;
+	margin-bottom: 30px;
+}
+
+.gallery-prew {
+	float: left;
+}
+
+.gallery-next {
+	float: right;
 }
 
 .big-map-image {
 	display: none;
+}
+
+.appointment-form input {
+	border: 2px solid #000101;
+	width: 106px;
+	padding: 6px 15px 12px;
+	margin-right: 17px;
+	margin-bottom: 19px;
+	background-color: #f9f6f3;
+}
+
+.appointment-form input:nth-child(2n) {
+	margin-right: 0;
+}
+
+.appointment-form input::-webkit-input-placeholder {
+	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #000000;
+	font-weight: bold;
+	line-height: 24px;
+	text-transform: uppercase;
+}
+
+.appointment-form input:-moz-placeholder {
+	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #000000;
+	font-weight: bold;
+	line-height: 24px;
+	text-transform: uppercase;
+}
+
+.appointment-form input:-ms-input-placeholder {
+	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #000000;
+	font-weight: bold;
+	line-height: 24px;
+	text-transform: uppercase;
+}
+
+.appointment-form input:focus {
+	outline: none;
+	border-color: #663d15;
+}
+
+.appointment-form form {
+	margin-top: 27px;
+}
+
+.appointment-form .btn {
+	width: 100%;
+	margin-top: 20px;
 }
 
 
@@ -223,26 +395,90 @@ figure.gallery-content {
 /*футер*/
 
 .main-footer {
-	background-color: #cccccc;
+	margin-top: 64px;
+	padding: 58px 0px 37px;
+	background: #cccccc url("../img/footer-bg.png");
+	color: #ffffff;
+}
+
+.main-footer p {
+	padding: 0;
+	margin: 0;
 }
 
 .footer-contacts {
 	float: left;
 	width: 320px;
-	margin-right: 60px;
+	margin-right: 22px;
 	/*    background-color: brown;*/
+}
+
+.footer-contacts a {
+	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #ffffff;
+	font-weight: bold;
+	line-height: 24px;
+	text-transform: uppercase;
 }
 
 .footer-social {
 	float: left;
 	width: 260px;
+	text-align: center;
 	/*    background-color: brown;*/
+}
+
+.social-btn {
+	display: inline-block;
+	width: 43px;
+	height: 43px;
+	margin-right: 3px;
+	background-color: #000000;
+}
+
+.footer-social p {
+	margin-bottom: 15px;
+}
+
+.social-btn-vk {
+	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 32% -50%;
+}
+
+.social-btn-vk:hover {
+	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 32% 134%;
+}
+
+.social-btn-fb {
+	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 71% -30%;
+}
+
+.social-btn-fb:hover {
+	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 71% 145%;
+}
+
+.social-btn-inst {
+	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 105% -34%;
+}
+
+.social-btn-inst:hover {
+	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 105% 145%;
 }
 
 .footer-copyright {
 	float: right;
-	width: 160px;
+	width: 140px;
+	text-align: center;
 	/*    background-color: brown;*/
+}
+
+.footer-copyright p {
+	margin-bottom: 15px;
+}
+
+.footer-copyright .btn:hover {
+	color: #000000;
+	background-color: #ffffff;
 }
 
 .login-popup {
