--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+	position: relative;
 	min-width: 960px;
 	margin: 0;
 	padding: 0;
@@ -74,7 +75,7 @@ h2 {
 
 .user-block {
 	float: right;
-	width: 107px;
+	min-width: 107px;
 	max-width: 160px;
 	/*    background-color: cornflowerblue;*/
 }
@@ -86,7 +87,7 @@ h2 {
 	content: " ";
 	width: 24px;
 	height: 24px;
-	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 1% 103%;
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 20% 103%;
 }
 
 .user-block a {
@@ -100,10 +101,12 @@ h2 {
 	line-height: 16px;
 	text-transform: uppercase;
 	text-decoration: none;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .user-block a:hover::before {
-	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 0% 5%;
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 19% 5%;
 }
 
 .active a:after {
@@ -124,7 +127,7 @@ h2 {
 	width: 368px;
 	min-height: 152px;
 	margin: 0 auto;
-	margin-bottom: 92px;
+	margin-bottom: 72px;
 	/*    background-color: aquamarine;*/
 }
 
@@ -133,7 +136,6 @@ h2 {
 }
 
 .features-item {
-	position: relative;
 	float: left;
 	width: 300px;
 	margin-right: 20px;
@@ -145,10 +147,10 @@ h2 {
 	margin-right: 0px
 }
 
-.features-item::before {
+.features-title::after {
 	position: absolute;
 	content: " ";
-	top: 55px;
+	bottom: -45px;
 	left: 50%;
 	margin-left: -10px;
 	width: 20px;
@@ -158,6 +160,7 @@ h2 {
 }
 
 .features-title {
+	position: relative;
 	color: #f7f4f1;
 	font-size: 30px;
 	font-weight: bold;
@@ -175,8 +178,8 @@ h2 {
 .index-content {
 	position: relative;
 	margin-bottom: 34px;
-	padding: 26px 80px 54px;
-	background: #ffffff url("../img/index-content-bg.jpg")
+	padding: 26px 80px 57px;
+	background: #ffffff url("../img/index-content-bg.jpg");
 }
 
 .index-content::before {
@@ -196,6 +199,10 @@ h2 {
 	margin-bottom: 30px;
 }
 
+.gallery-title {
+	margin-bottom: 37px;
+}
+
 .news-preview {
 	list-style: none;
 	margin: 0;
@@ -204,6 +211,7 @@ h2 {
 
 .news-preview li {
 	margin-bottom: 24px;
+	width: 300px;
 }
 
 time {
@@ -220,6 +228,7 @@ time {
 	text-decoration: none;
 	text-align: center;
 	vertical-align: top;
+	line-height: 24px;
 }
 
 .btn:hover {
@@ -237,13 +246,18 @@ button.btn {
 	text-transform: uppercase;
 }
 
+.main-contacts {
+	position: relative;
+}
+
 .main-contacts .btn {
-	margin-right: 20px;
+	margin-right: 17px;
 	margin-top: 23px;
 }
 
 .main-contacts p {
-	margin-bottom: 23px
+	margin-bottom: 23px;
+	width: 300px;
 }
 
 .news-preview + .btn {
@@ -254,10 +268,6 @@ button.btn {
 	float: left;
 	width: 380px;
 	/*    background-color: firebrick;*/
-}
-
-.modal-map {
-	display: none;
 }
 
 .content-column-right {
@@ -281,53 +291,77 @@ button.btn {
 	float: right;
 }
 
-.big-map-image {
+.modal-map {
+	position: absolute;
+	top: -259px;
+	width: 767px;
+	height: 561px;
+	border: 7px solid #ffffff;
+	position: absolute;
 	display: none;
+	box-shadow: 0px 30px 50px 0px rgba(0, 1, 1, 0.75);
 }
 
-.appointment-form input {
+.modal-map-show {
+	display: block;
+	-webkit-animation: bounceInLeft 0.6s;
+	animation: bounceInLeft 0.6s;
+}
+
+.appointment-form input,
+.login-popup input:not([type="checkbox"]) {
 	border: 2px solid #000101;
 	width: 106px;
-	padding: 6px 15px 12px;
+	padding: 11px 15px 10px;
 	margin-right: 17px;
 	margin-bottom: 19px;
 	background-color: #f9f6f3;
+	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	color: #000000;
+	font-weight: bold;
+	line-height: 1;
 }
 
 .appointment-form input:nth-child(2n) {
 	margin-right: 0;
 }
 
-.appointment-form input::-webkit-input-placeholder {
+.appointment-form input::-webkit-input-placeholder,
+.login-popup input::-webkit-input-placeholder {
 	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #000000;
 	font-weight: bold;
-	line-height: 24px;
+	line-height: 18px;
 	text-transform: uppercase;
 }
 
-.appointment-form input:-moz-placeholder {
+.appointment-form input::-moz-placeholder,
+.login-popup input::-moz-placeholder {
 	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #000000;
 	font-weight: bold;
-	line-height: 24px;
+	line-height: 1;
 	text-transform: uppercase;
+	opacity: 1;
 }
 
-.appointment-form input:-ms-input-placeholder {
+.appointment-form input:-ms-input-placeholder,
+.login-popup input:-ms-input-placeholder {
 	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #000000;
 	font-weight: bold;
-	line-height: 24px;
+	line-height: 1;
 	text-transform: uppercase;
 }
 
-.appointment-form input:focus {
+.appointment-form input:focus,
+.login-popup input:not([type="checkbox"]):focus {
 	outline: none;
-	border-color: #663d15;
+	border: 2px solid #663d15;
 }
 
 .appointment-form form {
@@ -336,20 +370,155 @@ button.btn {
 
 .appointment-form .btn {
 	width: 100%;
-	margin-top: 20px;
+	margin-top: 14px;
 }
 
 
 /*каталог*/
 
+.catalog-page {
+	background: #ffffff url("../img/index-content-bg.jpg");
+}
+
+.catalog-page .main-footer {
+	box-shadow: inset 0px 56px 26px -39px rgba(0, 0, 0, 0.6);
+	margin-top: 47px;
+}
+
+.catalog-page .main-header {
+	margin-bottom: 58px;
+}
+
+.breadcrumbs {
+	margin-top: 24px;
+	margin-bottom: 33px;
+}
+
+.breadcrumbs ul {
+	margin: 0;
+	padding: 0;
+}
+
+.breadcrumbs li {
+	display: inline-block;
+	vertical-align: top;
+	margin-right: 37px;
+}
+
+.breadcrumbs a {
+	position: relative;
+	text-decoration: none;
+	color: #000000;
+}
+
+.breadcrumbs a::after {
+	position: absolute;
+	content: " ";
+	top: 6px;
+	right: -24px;
+	width: 7px;
+	height: 7px;
+	background: #000000;
+	transform: rotate(45deg);
+}
+
+.current-section {
+	color: #aba9a7;
+}
+
 .catalog-search {
 	float: left;
 	width: 220px;
-	background-color: aqua;
+	/*	background-color: aqua;*/
+}
+
+.catalog-search h2 {
+	margin-bottom: 28px;
+}
+
+.catalog-search .goods-group-title {
+	margin-bottom: 34px;
+    margin-top: 50px;
+}
+
+.catalog-search ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.catalog-search li {
+	margin-bottom: 13px;
+}
+
+.catalog-search label {
+	position: relative;
+	margin-left: 44px;
+	display: inline-block;
+	width: 170px;
+	line-height: 16px;
+}
+
+input[type="checkbox"] + label::before {
+	position: absolute;
+	content: "";
+	top: -3px;
+	left: -45px;
+	width: 18px;
+	height: 18px;
+	border: 2px solid #000000;
+}
+
+input[type="checkbox"] + label::after {
+	display: none;
+	position: absolute;
+	content: "";
+	top: -1px;
+	left: -44px;
+	width: 18px;
+	height: 18px;
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 96% 95%;
+}
+
+input[type="checkbox"]:checked + label::after {
+	display: block;
+}
+
+input[type="radio"] + label::before {
+	position: absolute;
+	content: "";
+	top: -3px;
+	left: -45px;
+	width: 18px;
+	height: 18px;
+	border: 2px solid #000000;
+	border-radius: 50%;
+}
+
+input[type="radio"] + label::after {
+	display: none;
+	position: absolute;
+	content: "";
+	top: 4px;
+	left: -38px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: #000000;
+}
+
+input[type="radio"]:checked + label::after {
+	display: block;
+}
+
+.catalog-search-btn {
+	margin-top: 39px;
+	width: 112px;
 }
 
 .catalog-products {
 	float: right;
+	padding-top: 22px;
 	width: 700px;
 	font-size: 0;
 	/*    background-color: aqua;*/
@@ -359,8 +528,20 @@ button.btn {
 	display: inline-block;
 	vertical-align: top;
 	width: 220px;
+	min-height: 286px;
 	margin-right: 20px;
+	margin-bottom: 20px;
 	font-size: 14px;
+	background-color: #ffffff;
+	box-shadow: 0px 0px 15px 0px rgba(0, 1, 1, 0.2);
+}
+
+.catalog-product-image {
+	margin-bottom: 7px;
+}
+
+.catalog-product:hover {
+	box-shadow: 3px 4px 25px 0px rgba(0, 1, 1, 0.3);
 }
 
 .catalog-product:nth-child(3n) {
@@ -391,6 +572,86 @@ button.btn {
 	margin-right: 0;
 }
 
+.product-name {
+	font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	line-height: 18px;
+	color: #000000;
+	font-weight: bold;
+	text-decoration: none;
+	text-transform: none;
+}
+
+.buy-accept {
+	width: 78px;
+	float: right;
+}
+
+.product-price {
+	background-color: #e5e5e5;
+	display: block;
+	width: 186px;
+	height: 43px;
+	vertical-align: middle;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 13px;
+	line-height: 43px;
+}
+
+.product-name span {
+	text-transform: uppercase;
+}
+
+.catalog-product-description {
+	padding: 0 17px;
+	line-height: 17px
+}
+
+.catalog-pagination {
+	margin-top: 24px;
+}
+
+.catalog-pagination ul {
+	margin: 0;
+	padding: 0;
+	font-size: 0;
+}
+
+.pagination-page {
+	padding: 0;
+	margin: 0;
+	display: inline-block;
+	vertical-align: top;
+	font-size: 14px;
+	width: 43px;
+	height: 43px;
+	color: #ffffff;
+	background: #000000;
+	margin-right: 7px;
+	text-align: center;
+	line-height: 42px;
+}
+
+.pagination-page a {
+	display: block;
+	font-size: 14px;
+	width: 100%;
+	height: 100%;
+	color: #ffffff;
+	background: #000000;
+	text-decoration: none;
+	text-align: center;
+}
+
+.pagination-page a:hover {
+	background-color: #663d15;
+}
+
+.active-page {
+	background-color: #ffffff;
+	color: #000000;
+}
 
 /*футер*/
 
@@ -442,27 +703,27 @@ button.btn {
 }
 
 .social-btn-vk {
-	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 32% -50%;
+	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 42% -50%;
 }
 
 .social-btn-vk:hover {
-	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 32% 134%;
+	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 42% 134%;
 }
 
 .social-btn-fb {
-	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 71% -30%;
+	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 64% -30%;
 }
 
 .social-btn-fb:hover {
-	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 71% 145%;
+	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 64% 145%;
 }
 
 .social-btn-inst {
-	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 105% -34%;
+	background: #000000 url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 84% -34%;
 }
 
 .social-btn-inst:hover {
-	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 105% 145%;
+	background: #ffffff url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 84% 145%;
 }
 
 .footer-copyright {
@@ -482,5 +743,222 @@ button.btn {
 }
 
 .login-popup {
+	position: absolute;
+	top: 120px;
+	left: 0;
+	right: 0;
+	width: 460px;
+	margin: 0 auto;
 	display: none;
+	background: #ffffff url("../img/index-content-bg.jpg");
+	margin-bottom: 90px;
+	padding: 54px 0 58px 0;
+	box-shadow: 0px 30px 50px 0px rgba(0, 1, 1, 0.75);
+}
+
+.login-popup-show {
+	display: block;
+	-webkit-animation: bounceInLeft 0.6s;
+	animation: bounceInLeft 0.6s;
+}
+
+@-webkit-keyframes bounceInLeft {
+	from,
+	60%,
+	75%,
+	90%,
+	to {
+		-webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+		animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+	}
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(-3000px, 0, 0);
+		transform: translate3d(-3000px, 0, 0);
+	}
+	60% {
+		opacity: 1;
+		-webkit-transform: translate3d(25px, 0, 0);
+		transform: translate3d(25px, 0, 0);
+	}
+	75% {
+		-webkit-transform: translate3d(-10px, 0, 0);
+		transform: translate3d(-10px, 0, 0);
+	}
+	90% {
+		-webkit-transform: translate3d(5px, 0, 0);
+		transform: translate3d(5px, 0, 0);
+	}
+	to {
+		-webkit-transform: none;
+		transform: none;
+	}
+}
+
+@keyframes bounceInLeft {
+	from,
+	60%,
+	75%,
+	90%,
+	to {
+		-webkit-animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+		animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+	}
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(-3000px, 0, 0);
+		transform: translate3d(-3000px, 0, 0);
+	}
+	60% {
+		opacity: 1;
+		-webkit-transform: translate3d(25px, 0, 0);
+		transform: translate3d(25px, 0, 0);
+	}
+	75% {
+		-webkit-transform: translate3d(-10px, 0, 0);
+		transform: translate3d(-10px, 0, 0);
+	}
+	90% {
+		-webkit-transform: translate3d(5px, 0, 0);
+		transform: translate3d(5px, 0, 0);
+	}
+	to {
+		-webkit-transform: none;
+		transform: none;
+	}
+}
+
+
+/*
+.bounceInLeft {
+  -webkit-animation-name: bounceInLeft;
+  animation-name: bounceInLeft;
+}
+*/
+
+@-webkit-keyframes bounceOutRight {
+	20% {
+		opacity: 1;
+		-webkit-transform: translate3d(-20px, 0, 0);
+		transform: translate3d(-20px, 0, 0);
+	}
+	to {
+		opacity: 0;
+		-webkit-transform: translate3d(2000px, 0, 0);
+		transform: translate3d(2000px, 0, 0);
+	}
+}
+
+@keyframes bounceOutRight {
+	20% {
+		opacity: 1;
+		-webkit-transform: translate3d(-20px, 0, 0);
+		transform: translate3d(-20px, 0, 0);
+	}
+	to {
+		opacity: 0;
+		-webkit-transform: translate3d(2000px, 0, 0);
+		transform: translate3d(2000px, 0, 0);
+	}
+}
+
+.bounceOutRight {
+	-webkit-animation: bounceOutRight 0.6s;
+	animation: bounceOutRight 0.6s;
+}
+
+.closing-cross {
+	position: absolute;
+	top: 8px;
+	right: -35px;
+	width: 23px;
+	height: 23px;
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 100% 6%;
+	border: none;
+	font-weight: normal;
+	outline: none;
+}
+
+.login-popup form {
+	width: 300px;
+	margin: 0 auto;
+	text-align: left;
+}
+
+.login-popup input:not([type="checkbox"]) {
+	position: relative;
+	width: 241px;
+	margin: 0;
+	margin-bottom: 10px;
+	padding-right: 40px;
+}
+
+.login-popup fieldset {
+	border: none;
+	padding: 0;
+	margin: 0;
+}
+
+.login-popup legend {
+	font-size: 30px;
+	margin-bottom: 10px;
+}
+
+.login-popup p {
+	margin-bottom: 11px;
+}
+
+input[name="user-login"] {
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 266px 7px;
+}
+
+input[name="user-password"] {
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 266px -35px;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+	display: none;
+}
+
+label[for="save-me"] {
+	position: relative;
+	margin-left: 30px;
+	line-height: 30px;
+}
+
+label[for="save-me"]::before {
+	position: absolute;
+	content: "";
+	top: -3px;
+	left: -30px;
+	width: 18px;
+	height: 18px;
+	border: 2px solid #000000;
+}
+
+label[for="save-me"]::after {
+	display: none;
+	position: absolute;
+	content: "";
+	top: -1px;
+	left: -29px;
+	width: 18px;
+	height: 18px;
+	background: url("../img/barbershop-styleguide-icon-sprite.png") no-repeat 96% 95%;
+}
+
+input[id="save-me"]:checked ~ label[for="save-me"]::after {
+	display: block;
+}
+
+.login-popup .btn {
+	width: 100%;
+	margin-top: 12px;
+}
+
+.forgot-password {
+	color: #000000;
+	margin-top: 3px;
+	float: right;
 }
