--- a/css/style.css
+++ b/css/style.css
@@ -376,11 +376,16 @@ button.btn {
 
 /*каталог*/
 
-.catalog-page {
+.catalog-page,
+.catalog-item-page,
+.price-list {
 	background: #ffffff url("../img/index-content-bg.jpg");
 }
 
-.catalog-page .main-footer {
+.catalog-page .main-footer,
+.catalog-item-page .main-footer,
+.price-list .main-footer
+ {
 	box-shadow: inset 0px 56px 26px -39px rgba(0, 0, 0, 0.6);
 	margin-top: 47px;
 }
@@ -559,7 +564,7 @@ input[type="radio"]:checked + label::after {
 
 .item-description {
 	float: right;
-	width: 400px;
+	width: 391px;
 }
 
 .item-preview-images a {
@@ -651,6 +656,200 @@ input[type="radio"]:checked + label::after {
 .active-page {
 	background-color: #ffffff;
 	color: #000000;
+}
+
+/*СТРАНИЦА ТОВАРА*/
+
+.item-images img {
+	box-shadow: 0px 0px 15px 0px rgba(0, 1, 1, 0.2);
+}
+
+.item-preview-images {
+	margin-top: 10px;
+}
+
+.catalog-item-page .main-footer {
+	margin-top: 34px;
+}
+
+.catalog-item-page .breadcrumbs {
+	margin-bottom: 55px;
+}
+
+.item-article {
+	float: right;
+	color: #aeaeae;
+}
+
+.catalog-item-description {
+	clear: both;
+}
+
+.item-description-detail p:first-child {
+	float: left;
+	margin-bottom: 29px;
+}
+
+.catalog-item-page .product-price {
+	margin: 0;
+	    margin-top: 35px;
+}
+
+.item-description {
+	padding-top: 5px;
+}
+
+.item-description-detail {
+	margin-bottom: 65px;
+}
+
+.item-description-contents ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.item-description-contents li {
+	position: relative;
+	margin-left: 21px;
+}
+
+.item-description-contents li:before {
+	position: absolute;
+    content: " ";
+    top: 8px;
+    left: -19px;
+    width: 8px;
+    height: 8px;
+    background-color: #000000;
+    transform: rotate(45deg);
+}
+
+.item-description-contents h2 {
+	margin-bottom: 29px;
+}
+
+/*ПРАЙС-ЛИСТ*/
+.price-list .main-header {
+	margin-bottom: 59px;
+}
+
+.price-list .breadcrumbs {
+	margin-bottom: 57px;
+}
+
+.price-page-main-title {
+	position: relative;
+	width: 100%;
+	margin: 0 auto;
+	margin-bottom: 56px;
+}
+.price-page-main-title::before {
+	content: "";
+	position: absolute;
+	top: 13px;
+	left: 0;
+	width: 100%;
+	border: 1px solid black;
+	z-index: 1;
+
+}
+
+.price-list-big-title {
+	position: relative;
+	z-index: 10;
+	font-size: 48px;
+	margin: 0 auto;
+	width: 620px;
+	text-align: center;
+	background: #ffffff url("../img/index-content-bg.jpg");
+
+}
+
+.means-used {
+	float: left;
+	width: 400px;
+}
+
+.price-list h2 {
+	line-height: 28px;
+	margin-bottom: 35px;
+}
+
+.means-used h2 {
+	width: 240px;
+}
+
+.means-used-list {
+	list-style: none;
+	margin: 0;
+	margin-left: 20px;
+	margin-top: -4px;
+	padding: 0;
+}
+
+.means-used-list li {
+	position: relative;
+	margin-bottom: 12px;
+}
+
+.means-used-list li::after {
+	position: absolute;
+	content: " ";
+	top: 6px;
+	left: -19px;
+	width: 7px;
+	height: 7px;
+	background: #000000;
+	transform: rotate(45deg);
+}
+
+.prices-masters {
+	float: right;
+	width: 460px;
+	margin-bottom: 60px;
+}
+
+.prices-masters h2 {
+	width: 200px;
+}
+
+.prices-masters table {
+	border-collapse: collapse;
+
+}
+
+.prices-masters td {
+	padding: 8px 17px;
+	width: 193px;
+	border: 2px solid black;
+}
+
+.prices-masters td:nth-child(2n) {
+	text-align: center;
+}
+
+.about-us {
+	clear: both;
+	margin-bottom: 62px;
+}
+
+.about-us h2 {
+	margin-bottom: 15px;
+}
+
+.about-us-left-col {
+	float: left;
+	width: 400px;
+}
+
+.about-us-right-col {
+	float: right;
+	width: 460px;
+}
+
+.about-us p {
+	width: 390px;
 }
 
 /*футер*/
@@ -754,6 +953,7 @@ input[type="radio"]:checked + label::after {
 	margin-bottom: 90px;
 	padding: 54px 0 58px 0;
 	box-shadow: 0px 30px 50px 0px rgba(0, 1, 1, 0.75);
+	z-index: 20;
 }
 
 .login-popup-show {
